--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editor</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://unpkg.com/easymde/dist/easymde.min.css">
     <script src="https://unpkg.com/easymde/dist/easymde.min.js"></script>
 </head>
@@ -13,20 +13,27 @@
         <a href="/dashboard" class="logo">MyBlog</a>
         <nav class="header-nav">
             <button type="button" id="save-post-button" class="button">Publish</button>
+            <div id="theme-toggle" class="theme-toggle">
+                <svg class="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="4"></circle><path d="M12 2v2"></path><path d="M12 20v2"></path><path d="M4.93 4.93l1.41 1.41"></path><path d="M17.66 17.66l1.41 1.41"></path><path d="M2 12h2"></path><path d="M20 12h2"></path><path d="M4.93 19.07l1.41-1.41"></path><path d="M17.66 6.34l1.41-1.41"></path></svg>
+                <svg class="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path></svg>
+            </div>
         </nav>
     </header>
     <main class="editor-container">
         <form id="blog-form">
-            <input type="text" id="title" placeholder="Title" required>
+            <textarea id="title" placeholder="Title" required rows="2"></textarea>
             <textarea id="content" required></textarea>
             
-            <!-- Hidden fields for other data -->
+            <!-- Author and Email will be automatically populated when Authentication is implemented -->
             <input type="hidden" id="author" value="Default Author">
             <input type="hidden" id="email" value="author@example.com">
-            <input type="hidden" id="font-family" value="">
-            <input type="hidden" id="font-size" value="">
+
+            <div class="editor-meta-info">
+                <span id="word-count">Words: 0</span>
+                <span id="reading-time">Reading time: 0 min</span>
+            </div>
         </form>
     </main>
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
