--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="main-header">
-        <a href="/dashboard" class="logo">MyBlog</a>
+        <a href="/dashboard" class="logo">Verbius</a>
         <nav class="header-nav">
             <button type="button" id="save-post-button" class="button">Publish</button>
             <div id="theme-toggle" class="theme-toggle">
