--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="main-header">
-        <a href="/dashboard" class="logo">MyBlog</a>
+        <a href="/dashboard" class="logo">Verbius</a>
         <nav class="header-nav">
             <a href="/editor" class="button button-primary">New Post</a>
             <div id="theme-toggle" class="theme-toggle">
